--- a/app/index.html
+++ b/app/index.html
@@ -12,8 +12,10 @@
     <label>Friend's ID:</label><br/>
     <input id="peerID"></input><br/>
 
-    <button id="connect">connect</button><br/>
+    <textarea></textarea>
 
+    <button id="connect">connect</button><br/>
     <script src="scripts/bundle.js"></script>
+
 </body>
 </html>
