added react, set up webkitspeech to render transcript via react

--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--  <!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -18,4 +18,16 @@
     <script src="scripts/bundle.js"></script>
 
 </body>
+</html> -->
+
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Quill</title>
+  </head>
+  <body>
+    <div id="content"></div>
+    <script src="scripts/bundle.js"></script>
+  </body>
 </html>
