--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,6 @@
   </head>
   <body>
     <div id="content"></div>
-    <script src="scripts/bundle.js"></script>
+    <script src="components/bundle.js"></script>
   </body>
 </html>
