--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,10 @@
-<!--  <!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8">
-    <title></title>
-</head>
-<body>
-
-    <label>My Peer ID:</label><br/>
-    <input id="myID" readonly></input><br/>
-
-    <label>Friend's ID:</label><br/>
-    <input id="peerID"></input><br/>
-
-    <textarea></textarea>
-
-    <button id="connect">connect</button><br/>
-    <script src="scripts/bundle.js"></script>
-
-</body>
-</html> -->
-
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>Quill</title>
+    <!-- <link rel="stylesheet" type="text/css"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css"> -->
   </head>
   <body>
     <div id="content"></div>
