--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <link rel="stylesheet" href="./styles/bootstrap.min.css">
+  <!-- <link rel="stylesheet" href="./styles/bootstrap.min.css"> -->
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/flexgrid.scss">
   <script src="scripts/bundle.js"></script>
