able to resize vids to correct dimensions on append of new video

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title></title>
-  <!-- <link rel="stylesheet" href="./styles/bootstrap.min.css"> -->
+  <link rel="stylesheet" href="./styles/bootstrap.min.css">
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="stylesheet" href="./styles/flexgrid.scss">
   <script src="scripts/bundle.js"></script>
@@ -15,15 +15,16 @@
       <div class="localVideo">
       </div>
     </div> -->
-<label>My Peer ID:</label><br/>
-<input id="myID" readonly></input><br/>
-
-<label>Friend's ID:</label><br/>
-<input id="peerID"></input><br/>
-
-<button id="connect">connect</button><br/>
-
 <div id="videoContainer">
+</div>
+<div id="tools">
+  <label>My Peer ID:</label><br/>
+  <input id="myID" readonly></input><br/>
+
+  <label>Friend's ID:</label><br/>
+  <input id="peerID"></input><br/>
+
+  <button id="connect">connect</button><br/>
 </div>
 
 </body>
