display local stream in small div instead of full-size div like incoming videos

--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
   <input id="peerID"></input><br/>
 
   <button id="connect">connect</button><br/>
+  <div id="localMediaContainer"></div>
 </div>
 
 </body>
