--- a/app/index.html
+++ b/app/index.html
@@ -16,13 +16,21 @@
 </div>
 </div> -->
 <div id="videoContainer">
-  <div id="controls">
+  <form class="navbar-form navbar-left" role="search">
+  <div class="form-group">
+    <input id="myID" type="text" class="form-control" readonly>
+    <input id="peerID" type="text" class="form-control" placeholder="Peer's ID">
+  </div>
+  <button id="connect" type="submit" class="btn btn-default">Submit</button>
+</form>
+
+  <!-- <div id="controls">
     <label>My Peer ID:</label>
     <input id="myID" readonly></input>
     <label>Friend's ID:</label>
     <input id="peerID"></input>
     <button id="connect">connect</button><br/>
-  </div>
+  </div> -->
 </div>
 <div id="tools">
   <div id="transcript"></div>
