--- a/app/index.html
+++ b/app/index.html
@@ -5,32 +5,20 @@
   <title></title>
   <link rel="stylesheet" href="./styles/bootstrap.min.css">
   <link rel="stylesheet" href="./styles/main.css">
-  <link rel="stylesheet" href="./styles/flexgrid.scss">
   <script src="scripts/bundle.js"></script>
 </head>
 <body>
-  <!-- <div class="tools">
-  <div class="transcriptContainer">
-</div>
-<div class="localVideo">
-</div>
-</div> -->
+
 <div id="videoContainer">
   <form class="navbar-form navbar-left" role="search">
   <div class="form-group">
     <input id="myID" type="text" class="form-control" readonly>
     <input id="peerID" type="text" class="form-control" placeholder="Peer's ID">
+    <button id="connect" type="button" class="btn btn-default">Submit</button>
+
   </div>
-  <button id="connect" type="submit" class="btn btn-default">Submit</button>
 </form>
 
-  <!-- <div id="controls">
-    <label>My Peer ID:</label>
-    <input id="myID" readonly></input>
-    <label>Friend's ID:</label>
-    <input id="peerID"></input>
-    <button id="connect">connect</button><br/>
-  </div> -->
 </div>
 <div id="tools">
   <div id="transcript"></div>
