--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" href="./styles/bootstrap.min.css">
   <link rel="stylesheet" href="./styles/main.css">
   <script src="scripts/bundle.js"></script>
+  <script src="scripts/jquery.min.js"></script>
+  <script src="scripts/bootstrap.min.js"></script>
 </head>
 <body>
 
