--- a/app/index.html
+++ b/app/index.html
@@ -12,21 +12,22 @@
 <body>
 
   <div id="videoContainer">
-    <div class="row">
-      <div class="col-lg-7">
+    <div class="row controls">
+      <div class="col-lg-8">
         <form class="navbar-form navbar-left">
           <div class="form-group">
             <input id="myID" type="text" class="form-control" readonly>
             <input id="peerID" type="text" class="form-control" placeholder="Peer's ID">
-            <button id="connect" type="button" class="btn btn-default">Submit</button>
+            <button id="connect" type="button" class="btn btn-primary">Call</button>
           </div>
+          <a download id="download" href="#" class="btn btn-success pull-right">Download Transcript</a>
         </form>
       </div>
-      <div id="alerts" class="col-lg-5">
+      <div id="alerts" class="col-lg-4">
         <div class="alert alert-success">
-  <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-  <strong>Welcome!</strong> Enter a peer ID or share yours to get started.
-</div>
+          <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+          <strong>Welcome!</strong> Enter a peer ID or share yours to get started.
+        </div>
       </div>
     </div>
   </div>
