welcome  modal with client side peer id validation.

--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="./styles/bootstrap.min.css">
     <link rel="stylesheet" href="./styles/main.css">
-    <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="./styles/basicModal.min.css">
 </head>
 <body>
     <div id="videoContainer">
@@ -33,6 +32,8 @@
         <div id="transcript"></div>
         <div id="localMediaContainer"></div>
     </div>
+    <script src="scripts/jquery.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
     <!-- browserify bundle -->
     <script src="scripts/bundle.js"></script>
 </body>
