removed default welcome message

--- a/app/index.html
+++ b/app/index.html
@@ -20,12 +20,7 @@
                     <a download id="download" href="#" class="btn btn-success pull-right">Download Transcript</a>
                 </form>
             </div>
-            <div id="alerts" class="col-lg-4">
-                <div class="alert alert-success">
-                    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
-                    <strong>Welcome!</strong> Enter a peer ID or share yours to get started.
-                </div>
-            </div>
+            <div id="alerts" class="col-lg-4"></div>
         </div>
     </div>
     <div id="tools">
