--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,8 @@
             <div class="col-lg-8">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
-                        <input id="myID" type="text" class="form-control" readonly>
+                        <input id="myID" type="text" class="form-control" placeholder="my ID" readonly>
+                        <!-- <input id="myName" type="text" class="form-control" placeholder="my name" readonly> -->
                         <input id="peerID" type="text" class="form-control" placeholder="Peer's ID">
                         <button id="connect" type="button" class="btn btn-primary">Call</button>
                     </div>
