CSS updated to logo

--- a/app/index.html
+++ b/app/index.html
@@ -10,9 +10,10 @@
 <body>
     <div id="videoContainer">
         <div class="row controls">
-            <div class="col-lg-8">
+            <div class="col-lg-10">
                 <form class="navbar-form navbar-left">
                     <div class="form-group">
+                        <img class="logo" src="./images/icon-128.png" alt="" />
                         <input id="myID" type="text" class="form-control" placeholder="my ID" readonly>
                         <!-- <input id="myName" type="text" class="form-control" placeholder="my name" readonly> -->
                         <input id="peerID" type="text" class="form-control" placeholder="Peer's ID">
@@ -21,7 +22,7 @@
                     <a download id="download" href="#" class="btn btn-success pull-right">Download Transcript</a>
                 </form>
             </div>
-            <div id="alerts" class="col-lg-4"></div>
+            <div id="alerts" class="col-lg-2"></div>
         </div>
     </div>
     <div id="tools">
